Fixed nav on mobile

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -57,6 +57,19 @@
     .nav .link {
       font-size: 1.2rem;
       display: flex;
+      align-items: center;
+
+      .icon {
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+        transition: all 0.2s ease 0s;
+
+        &:hover {
+          cursor: pointer;
+          color: $accent;
+        }
+      }
     }
   }
 
